--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -13,7 +13,6 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "googleapis": "^105.0.0",
-    "jade": "^1.11.0",
     "moment": "^2.29.4"
   },
   "devDependencies": {
